--- a/src/components/QuranReader/QuranReader.module.scss
+++ b/src/components/QuranReader/QuranReader.module.scss
@@ -44,9 +44,10 @@ $virtual-scrolling-height-bandage: calc(
   }
 
   @include breakpoints.smallerThanTablet {
-    // TODO: we should add the banner height here if it's shown
-    // padding-block-start: calc($quran-reader-padding + var(--mobile-reading-mode-tabs-height) + var(--banner-height));
-    padding-block-start: calc($quran-reader-padding + var(--mobile-reading-mode-tabs-height));
+    padding-block-start: var(--mobile-context-menu-height);
+    // Faster expand with ease-out
+    transition: padding-block-start var(--transition-fast) ease-out
+      var(--mobile-stagger-delay-content);
   }
 }
 
@@ -78,16 +79,25 @@ $virtual-scrolling-height-bandage: calc(
 // Mobile collapsed state: when context menu is collapsed (scrolled past threshold)
 .mobileCollapsed {
   padding-block-start: 0;
+  // Fast collapse with ease-in
+  transition: padding-block-start var(--transition-fast) ease-in 0ms;
 }
 
 // Mobile collapsed state with Tajweed mushaf: needs extra padding for tajweed trigger
 .mobileCollapsedTajweed {
   padding-block-start: var(--tajweed-trigger-height);
+  // Fast collapse with ease-in
+  transition: padding-block-start var(--transition-fast) ease-in 0ms;
 }
 
-// Mobile expanded state with Tajweed mushaf: add extra padding for tajweed trigger
+// Mobile expanded state with Tajweed mushaf: context menu + tajweed trigger
 .mobileTajweedExpanded {
-  padding-block-start: calc(
-    var(--navbar-height) + var(--mobile-reading-mode-tabs-height) + var(--tajweed-trigger-height)
-  );
+  padding-block-start: calc(var(--mobile-context-menu-height) + var(--tajweed-trigger-height));
+}
+
+// Desktop state with Tajweed mushaf: add extra padding for tajweed trigger
+.desktopTajweed {
+  @include breakpoints.tablet {
+    padding-block-start: calc(var(--navbar-height) + var(--tajweed-trigger-height));
+  }
 }
